fix: layout breaking the page

--- a/src/pages/details-book-page/index.css
+++ b/src/pages/details-book-page/index.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  height: 100%;
   padding-top: 2em;
 }
 
@@ -129,5 +130,4 @@
   position: absolute;
   display: flex;
   font-size: 1.2em;
-  width: 100%;
 }
